--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "npx tsc -w",
+    "start": "node ./public/index.js",
     "build": "npx tsc",
     "dev": "npx nodemon",
     "test": "jest"
