--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "node ./public/index.js",
-    "build": "npx tsc",
+    "build": "./build.sh",
     "dev": "npx nodemon",
     "test": "jest"
   },
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.11",
     "@types/tmi.js": "^1.8.1",
@@ -28,6 +29,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "faunadb": "^4.4.1",
     "tmi.js": "^1.8.5"
   }
