--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/bad-words": "^3.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
@@ -30,9 +31,15 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "bad-words": "^3.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faunadb": "^4.4.1",
     "tmi.js": "^1.8.5"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "/src/frontend"
+    ]
   }
 }
