--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.11",
     "@types/tmi.js": "^1.8.1",
     "dotenv": "^10.0.0",
@@ -35,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faunadb": "^4.4.1",
+    "lodash": "^4.17.21",
     "tmi.js": "^1.8.5"
   },
   "jest": {
