--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faunadb": "^4.4.1",
+    "helmet": "^4.6.0",
     "lodash": "^4.17.21",
     "tmi.js": "^1.8.5"
   },
