--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -70,6 +70,7 @@
     "ts-pnp": "1.2.0",
     "typescript": "^4.5.3",
     "url-loader": "4.1.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
@@ -166,6 +167,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "npm-watch": "^0.11.0"
   }
 }
