--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "faunadb": "^4.4.1",
     "helmet": "^4.6.0",
     "lodash": "^4.17.21",
+    "stripe": "^8.199.0",
     "tmi.js": "^1.8.5",
     "uuid": "^8.3.2"
   },
