--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,6 +6,8 @@
     "@auth0/auth0-react": "^1.8.0",
     "@babel/core": "7.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.22.0",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
