--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "cors": "^2.8.5",
+    "dprint": "^0.22.0",
     "express": "^4.17.1",
     "faunadb": "^4.4.1",
     "helmet": "^4.6.0",
